--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- Google Sign-in -->
+    <meta name="google-signin-client_id" content="557295454798-gk95p09dce563lq6aeq9sjtk6o18igdj.apps.googleusercontent.com" />
+    <meta name="google-signin-scope" content="profile email" />
   </head>
   <body>
     <div id="root"></div>
